[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "takler"
authors = [
    {name="Wang Dapeng", email="perillaroc@gmail.com"}
]
description = "A workflow tool for CEMC/CMA."
readme = "README.md"
keywords = ["workflow", "cemc"]
license = { text = "Apache-2.0" }
dynamic = ["version"]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',

    "Intended Audience :: Developers",

    'License :: OSI Approved :: Apache Software License',

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    'anyio',
    'lark',
    'grpcio',
    'jinja2',
    'pydantic>=2.0',
    'typer',
    'pyyaml',
    'protobuf',
    'importlib-metadata; python_version<"3.8"',
]

[project.urls]
Homepage = "https://github.com/perillaroc/takler"
Repository = "https://github.com/perillaroc/takler.git"

[project.optional-dependencies]
test = ["pytest"]
log = ["loguru"]

[tool.setuptools.packages.find]
where = ["."]
include = ["takler"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_file = "takler/_version.py"